src/test/ui/nll/closure-requirements/propagate-approximated-fail-no-postdom.stderr
note: no external requirements
  --> $DIR/propagate-approximated-fail-no-postdom.rs:43:9
   |
LL |         |_outlives1, _outlives2, _outlives3, x, y| {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: defining type: supply::<'_#1r, '_#2r, '_#3r>::{closure#0} with closure substs [
               i16,
               for<'a^0, 'b^1> extern "rust-call" fn((std::cell::Cell<&'_#4r &'a^0 u32>, std::cell::Cell<&'_#5r &'a^0 u32>, std::cell::Cell<&'b^1 &'_#6r u32>, std::cell::Cell<&'a^0 u32>, std::cell::Cell<&'b^1 u32>)),
               (),
           ]
   = note: late-bound region is '_#7r
   = note: late-bound region is '_#8r
   = note: late-bound region is '_#9r

error: lifetime may not live long enough
  --> $DIR/propagate-approximated-fail-no-postdom.rs:46:13
   |
LL |         |_outlives1, _outlives2, _outlives3, x, y| {
   |          ----------              ---------- has type `Cell<&'2 &'_#6r u32>`
   |          |
   |          has type `Cell<&'_#4r &'1 u32>`
...
LL |             demand_y(x, y, p)
   |             ^^^^^^^^^^^^^^^^^ argument requires that `'1` must outlive `'2`

note: no external requirements
  --> $DIR/propagate-approximated-fail-no-postdom.rs:38:1
   |
LL | fn supply<'a, 'b, 'c>(cell_a: Cell<&'a u32>, cell_b: Cell<&'b u32>, cell_c: Cell<&'c u32>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: defining type: supply::<'_#1r, '_#2r, '_#3r>

error: aborting due to previous error

